# thuis

./: .gitignore  Dockerfile  README.md  build.sh  env.sh  gegevens.py  hue.py  pyproject.toml  renovate.json  requirements.txt  run.sh  somfy.py  thuis.py
.github/workflows/: tests.yaml
cron/: installcron.sh  thuis
templates/: hoofdpagina.html  instellingen.html  lampen.html  lampengrid.html  menu.html  schermen.html  status.html  tokens.html
tests/: test_hoofdpagina.py  test_hue.py  test_login.py  test_paginas.py  test_somfy.py  test_tokens.py  test_wind.py  test_zonsensor.py
