[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thuis"
version = "1.0.0"
authors = [
    { name = "Peter van de Riet", email = "vdriet@gmail.com" },
]
description = "Besturing van apparatuur thuis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vdriet/thuis"
Issues = "https://github.com/vdriet/thuis/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "except JSONDecodeError as e:",
]
fail_under = 90

[tool.pylint]
indent-string = "  "
